[package]
name = "sensi-mouse"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sensi-mouse"
path = "src/main.rs"

# [lib]
# name = "sensi-mouse_lib"
# path = "src/lib/lib.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["macos-private-api", "shell-open", "system-tray"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
window-vibrancy = "0.3.2"
mac-mouse-sys = { path = "./crates/mac-mouse-sys" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "z"
lto = true
