[package]
name = "sensi-mouse"
version = "0.0.0"
description = ""
authors = ["Eva1ent"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sensi-mouse"
path = "src/main.rs"

# [lib]
# name = "sensi-mouse_lib"
# path = "src/lib/lib.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2.4", features = ["macos-private-api", "shell-open", "system-tray", "window-show"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
window-vibrancy = "0.3"

mac-mouse-sys = { path = "./crates/mac-mouse-sys" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "z"
lto = true
